# llama.cpp

common/: log.cpp
docs/: ops.md
examples/imatrix/: imatrix.cpp
examples/perplexity/: perplexity.cpp
ggml/include/: ggml-qnn.h
ggml/src/: ggml-backend.cpp  ggml-qnn.cpp
ggml/src/ggml-hexagon/: ggml-hexagon.cpp
ggml/src/ggml-qnn/: CMakeLists.txt  backend-ops.cpp  backend.hpp  buffer.hpp  common.cpp  common.hpp  convert.cpp  convert.hpp  dl-loader.hpp  dl_loader.hpp  ggml-qnn.cpp  graph.cpp  graph.hpp  logger.cpp  logger.hpp  op-config-base.hpp  op-config-caps.cpp  op-config-impl.cpp  op-config-impl.hpp  op-config.cpp  op-config.hpp  profiler.cpp  profiler.hpp  qnn-lib.cpp  qnn-lib.hpp  qnn-types.hpp  rpc-mem.hpp  tensor.hpp  utils.cpp  utils.hpp
ggml/src/ggml-qnn/hexagon/: CMakeLists.txt  GgmlOpPackage.xml
ggml/src/ggml-qnn/hexagon/GgmlOpPackage/: Makefile
ggml/src/ggml-qnn/hexagon/GgmlOpPackage/config/: GgmlOpPackage.xml
ggml/src/ggml-qnn/hexagon/GgmlOpPackage/src/: GgmlOpPackageInterface.cpp
ggml/src/ggml-qnn/hexagon/GgmlOpPackage/src/ops/: GgmlMulMat.cpp
ggml/src/ggml-qnn/hexagon/config/: ggml-op-package.xml
ggml/src/ggml-qnn/npu/: CMakeLists.txt
ggml/src/ggml-qnn/npu/device/: device.cpp  device_main.cpp  dma_transfer.cpp  dma_transfer.hpp  graph.cpp  graph.hpp  hexagon_npu_impl.cpp  op_flash_attn.cpp  op_flash_attn.hpp  op_glu.cpp  op_impl.cpp  op_impl.hpp  op_mul_mat.cpp  op_mul_mat.hpp  op_rope.cpp  op_rope.hpp  op_types.hpp  quants.cpp  quants.hpp  tensor.hpp  thread_pool.hpp  type_traits.cpp  type_traits.hpp  util.hpp  vec_dot.cpp  vec_dot.hpp  vec_math.inl  vec_ops.cpp  vec_ops.hpp  vec_ops.inl  vec_quant.inl  vtcm_mem.hpp
ggml/src/ggml-qnn/npu/device/op/: op_eltwise.hpp  op_flash_attn.cpp  op_glu.cpp  op_impl.cpp  op_mul_mat.cpp  op_registry.cpp  op_rope.cpp  op_rows.cpp  op_rows.hpp
ggml/src/ggml-qnn/npu/host/: buffer.cpp  buffer.hpp  device.cpp  device.hpp  ggml-hexagon-device.cpp  ggml-hexagon.cpp  graph.cpp  graph.hpp  host.cpp  host_device.cpp  host_device.hpp  tensor.hpp  util.cpp  util.hpp
ggml/src/ggml-qnn/npu/idl/: hexagon_npu.idl
ggml/src/ggml-qnn/qnn/: backend-ops.cpp  backend.hpp  ggml-qnn.cpp  op-config-caps.cpp  qnn-lib.cpp  qnn-lib.hpp  qnn-types.hpp  utils.cpp  utils.hpp
ggml/src/ggml-qnn/qnn/hexagon/: CMakeLists.txt
ggml/src/ggml-qnn/qnn/hexagon/GgmlOpPackage/src/ops/: GgmlMulMat.cpp
ggml/src/ggml-qnn/shared/: CMakeLists.txt  common.cpp  common.hpp  profiler.hpp  rpc-interface.hpp  rpc-mem.hpp
tests/: test-backend-ops.cpp
